--- a/index.html
+++ b/index.html
@@ -58,12 +58,14 @@
             transform: translateY(2px);
         }
         .footer {
-            width: 2/3;
-            font-size: 10px;
-            color: #888;
-            text-align: justify;
-            margin-top: 20px;
-        }
+        width: 33.33%; /* 1/3 szerokości ekranu */
+        font-size: 10px;
+        color: #888;
+        text-align: justify;
+        margin-top: 20px;
+        margin-left: auto;
+        margin-right: auto;
+		}
         .footer-text {
             margin-bottom: 10px;
         }
@@ -83,7 +85,7 @@
             <p>Daily Vault Balance: <b><span id="dailyVaultBalance"></span></b></p>
             <p>Last Daily Reward: <span id="lastDailyReward"></span></p>
 			<br>
-            <p>Weekly Vault Balance:<b><span id="weeklyVaultBalance"></span></b></p>
+            <p>Weekly Vault Balance: <b><span id="weeklyVaultBalance"></span></b></p>
             <p>Last Weekly Reward: <span id="lastWeeklyReward"></span></p>
 			<br>
             <p>Monthly Vault Balance: <b><span id="monthlyVaultBalance"></span></b></p>
