--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         }
         .footer {
         width: 33.33%; /* 1/3 szerokości ekranu */
-        font-size: 10px;
+        font-size: 12px;
         color: #888;
         text-align: justify;
         margin-top: 20px;
@@ -105,14 +105,26 @@
 			<br>
             <p>Monthly Vault Balance: <b><span id="monthlyVaultBalance"></span></b></p>
             <p>Last Monthly Reward: <span id="lastMonthlyReward"></span></p>
-        </div>
-
+		</div>
+		<head>
+<style>
+  h1 {
+    color: violet;
+  }
+</style>
+</head>
+<body>
+<br>
+<h1>ENTRY 2000 PLS</h1>
+</body>
         <button class="button button-deposit" id="deposit">Deposit</button>
         <button class="button button-hourly" id="claimHourlyReward">Claim Hourly Reward</button>
         <button class="button button-daily" id="claimDailyReward">Claim Daily Reward</button>
         <button class="button button-weekly" id="claimWeeklyReward">Claim Weekly Reward</button>
         <button class="button button-monthly" id="claimMonthlyReward">Claim Monthly Reward</button>
-        
+        <br>
+		<a href="https://scan.pulsechain.com/address/0x5Ed221dBb73869A00E50314E46Bb4EA7994d0b07/" target="_blank" style="display: flex; align-items: center; justify-content: center; color: white; text-decoration: none; margin-top: 10px;">SEE CONTRACT</a>
+
         <div class="footer">
             <p class="footer-text">The SimpleLottery contract is a basic lottery system where participants can deposit funds and have a chance to win prizes in random drawings. Here are the rules of this lottery:</p>
             <ol class="footer-list">
