--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
         h1 {
             margin-top: 0;
             color: #fff;
+            text-align: center;
         }
         p {
             margin: 5px 0;
             color: #fff;
+            text-align: center;
         }
         .button {
             display: inline-block;
@@ -73,14 +75,12 @@
             background-color: #ff0000; /* Nowy kolor przycisku "Claim Monthly Reward" */
         }
         .footer {
-        width: 33.33%; /* 1/3 szerokości ekranu */
-        font-size: 12px;
-        color: #888;
-        text-align: justify;
-        margin-top: 20px;
-        margin-left: auto;
-        margin-right: auto;
-		}
+            width: 60%;
+            font-size: 12px;
+            color: #888;
+            text-align: justify;
+            margin-top: 20px;
+        }
         .footer-text {
             margin-bottom: 10px;
         }
@@ -92,38 +92,24 @@
 <body>
     <div class="container">
         <h1>Pulsechain Lottery</h1>
-
         <div id="vaultBalances">
             <p>Hourly Vault Balance: <b><span id="hourlyVaultBalance"></span></b></p>
             <p>Last Hourly Reward: <span id="lastHourlyReward"></span></p>
-			<br>
             <p>Daily Vault Balance: <b><span id="dailyVaultBalance"></span></b></p>
             <p>Last Daily Reward: <span id="lastDailyReward"></span></p>
-			<br>
             <p>Weekly Vault Balance: <b><span id="weeklyVaultBalance"></span></b></p>
             <p>Last Weekly Reward: <span id="lastWeeklyReward"></span></p>
-			<br>
             <p>Monthly Vault Balance: <b><span id="monthlyVaultBalance"></span></b></p>
             <p>Last Monthly Reward: <span id="lastMonthlyReward"></span></p>
-		</div>
-		<head>
-<style>
-  h1 {
-    color: violet;
-  }
-</style>
-</head>
-<body>
-<br>
-<h1>ENTRY 2000 PLS</h1>
-</body>
+        </div>
+        <h1 style="color: violet;">ENTRY 2000 PLS</h1>
         <button class="button button-deposit" id="deposit">Deposit</button>
         <button class="button button-hourly" id="claimHourlyReward">Claim Hourly Reward</button>
         <button class="button button-daily" id="claimDailyReward">Claim Daily Reward</button>
         <button class="button button-weekly" id="claimWeeklyReward">Claim Weekly Reward</button>
         <button class="button button-monthly" id="claimMonthlyReward">Claim Monthly Reward</button>
         <br>
-		<a href="https://scan.pulsechain.com/address/0x5Ed221dBb73869A00E50314E46Bb4EA7994d0b07/" target="_blank" style="display: flex; align-items: center; justify-content: center; color: white; text-decoration: none; margin-top: 10px;">SEE CONTRACT</a>
+        <a href="https://scan.pulsechain.com/address/0x5Ed221dBb73869A00E50314E46Bb4EA7994d0b07/" target="_blank" style="display: flex; align-items: center; justify-content: center; color: white; text-decoration: none; margin-top: 10px;">SEE CONTRACT</a>
 
         <div class="footer">
             <p class="footer-text">The SimpleLottery contract is a basic lottery system where participants can deposit funds and have a chance to win prizes in random drawings. Here are the rules of this lottery:</p>
