--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
    - After the weekly and monthly reward distributions, the participants list is cleared by removing all participant addresses.
    - To participate in the next drawing, participants will need to deposit funds again.</li>
             </ol>
-            <p class="footer-text">These are the basic rules of operation and participation in the lottery described in the `SimpleLottery` contract.</p>
+            <p class="footer-text">These are the basic principles of operation and participation described in the `SimpleLottery` contract.</p>
         </div>
     </div>
 
