--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
    - To claim a reward, a participant needs to call the corresponding function based on the type of reward they want to claim. For example, the `sendHourlyReward()` function distributes the hourly reward.
    - There are specific time constraints that need to be met before a reward can be claimed. For example, for the hourly reward, at least 1 hour must have passed since the last hourly reward distribution.
    - The winner is randomly selected from the list of participants based on a random index generated using factors like time and participant's address.
-   - The winner receives a reward, which consists of a portion of the funds from the corresponding vault, and a commission (2% of the funds) is deducted and sent to a specific address.</li>
+   - The winner receives a reward, which consists of a portion of the funds from the corresponding vault, and a commission (2% of the funds) is deducted and sent to a creator address.</li>
                 <li>Clearing Participants List:
    - After the weekly and monthly reward distributions, the participants list is cleared by removing all participant addresses.
    - To participate in the next drawing, participants will need to deposit funds again.</li>
