--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <li>Participation:
    - To participate in the lottery, a participant needs to call the `deposit()` function and deposit at least <b>2000 PLS</b>.
    - If the participant has not participated before, they will be added to the list of participants.
-   - Upon deposit, the participant's funds are distributed into four "vaults": the hourly vault, daily vault, weekly vault, and monthly vault.</li>
+   - Upon deposit, the participant's funds are distributed into four "vaults": the hourly vault(10%), daily vault(20%), weekly vault(30%), and monthly vault(40%).</li>
                 <li>Rewards: Rewards are awarded in random drawings. The contract has four types of rewards: hourly, daily, weekly, and monthly. The rewards are paid out from the corresponding vault that accumulates the deposited funds.</li>
                 <li>Rewards:
    - Rewards are awarded in random drawings from each vault.
