--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
    - The winner is randomly selected from the list of participants based on a random index generated using factors like time and participant's address.
    - The winner receives a reward, which consists of a portion of the funds from the corresponding vault, and a commission (2% of the funds) is deducted and sent to a creator address.</li>
                 <li>Clearing Participants List:
-   - After the weekly and monthly reward distributions, the participants list is cleared by removing all participant addresses.
+   - After the monthly reward distributions, the participants list is cleared by removing all participant addresses.
    - To participate in the next drawing, participants will need to deposit funds again.</li>
             </ol>
             <p class="footer-text">These are the basic principles of operation and participation described in the `SimpleLottery` contract.</p>
