--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <a href="https://scan.pulsechain.com/address/0x5a6f0a3ee604EED66B603Db8fa963bDbeB91671b/" target="_blank" style="display: flex; align-items: center; justify-content: center; color: white; text-decoration: none; margin-top: 10px;">SEE CONTRACT</a>
 
         <div class="footer">
-            <p class="footer-text">The SimpleLottery contract is a basic system where participants can deposit funds and have a chance to win prizes in random drawings. Here are the rules of this contract:</p>
+            <p class="footer-text">The SimpleLottery contract is a basic lottery system where participants can deposit funds and have a chance to win prizes in random drawings. Here are the rules of this contract:</p>
             <ol class="footer-list">
                 <li>Participation:
    - To participate in the lottery, a participant needs to call the `deposit()` function and deposit at least <b>2000 PLS</b>.
